tests/negative/gold/string_interpolate_test.gold
tests/negative/string_interpolate_test.toit:7:15: error: Illegal identifier
  print "foo $class"
              ^~~~~
tests/negative/string_interpolate_test.toit:6:16: error: Unexpected block
  print "foo $(: print it) bar"
               ^~~~~~~~~~
tests/negative/string_interpolate_test.toit:6:16: error: Can't have a block as interpolated entry in a string
  print "foo $(: print it) bar"
               ^~~~~~~~~~
Compilation failed.
